<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:clipToPadding="false"
            tools:context=".DonateActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:orientation="vertical">

        <TextView
            android:text="@string/donate_header"
            android:textIsSelectable="false"/>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_action_paypal"
            android:text="@string/donate_paypal_title"
            android:textIsSelectable="false"/>

        <TextView
            android:text="@string/donate_paypal_description"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textIsSelectable="false"/>

        <Button
            android:id="@+id/paypal_button"
            android:layout_gravity="end"
            android:text="@string/donate_button"/>

        <LinearLayout
            android:id="@+id/in_app_layout"
            android:layout_gravity="fill_horizontal"
            android:orientation="vertical">

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_action_google_play"
                android:text="@string/donate_in_app_title"
                android:textIsSelectable="false"/>

            <TextView
                android:id="@+id/in_app_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate_in_app_description"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/donate_in_app_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:prompt="@string/donate_in_app_spinner_text"
                    tools:listitem="@android:layout/simple_spinner_dropdown_item"/>

                <Button
                    android:id="@+id/donate__in_app_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/donate_button"/>
            </LinearLayout>
        </LinearLayout>
    </GridLayout>

</ScrollView>